gmaps and datatable creating

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Find my PepPep</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzqfSXMQPTvYV677l_AgOrcQInn2MeEe0"></script>
   </head>
   <body>
     <div id="root"></div>
