css and updating points working

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>Find my PepPep</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzqfSXMQPTvYV677l_AgOrcQInn2MeEe0"></script>
+    <link rel="stylesheet" type="text/css" href="app.css">
   </head>
   <body>
     <div id="root"></div>
