--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <title>Father Finder</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzqfSXMQPTvYV677l_AgOrcQInn2MeEe0"></script>
     <link rel="stylesheet" type="text/css" href="app.css">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-93137404-2', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
     <div id="root"></div>
