--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Father Finder</title>
+    <title>Find People Hiking</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzqfSXMQPTvYV677l_AgOrcQInn2MeEe0"></script>
     <link rel="stylesheet" type="text/css" href="app.css">
+    <link href="./favicon.ico" rel="icon" type="image/x-icon" />
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
