--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Find People Hiking</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzqfSXMQPTvYV677l_AgOrcQInn2MeEe0"></script>
     <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="stylesheet" href="./node_modules/react-joyride/lib/react-joyride-compiled.css" type="text/css">
     <link href="./favicon.ico" rel="icon" type="image/x-icon" />
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -18,4 +19,6 @@
     <div id="root"></div>
     <script src="bundle.js"></script>
   </body>
+  <footer>
+  </footer>
 </html>
