--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzqfSXMQPTvYV677l_AgOrcQInn2MeEe0"></script>
     <link rel="stylesheet" type="text/css" href="app.css">
     <link rel="stylesheet" type="text/css" href="react-joyride-compiled.css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="./favicon.ico" rel="icon" type="image/x-icon" />
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
